<resources>
    <string name="app_name">EuroPresents</string>
    <string name="not_log_in">Log in failed</string>
    <string name="facebook_app_id">142020106486427</string>
    <string name="fb_login_protocol_scheme">fb142020106486427</string>
    <string name="signin">Sign in</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signin_form">Signin form</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="send">Send</string>
    <string name="validation_empty_fields">You must complete all fields</string>
    <string name="validation_password_not_match">The password doesn\'t match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend_email">Resend email</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_email_verification">You must verify your email</string>
    <string name="accept">Accept</string>
    <string name="email_verification">Email verification</string>
    <string name="insert_coin">Insert coin</string>
</resources>
