<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.ciaprojects.europresents.SigninActivity">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_form"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"/>

        <ViewAnimator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:id="@+id/view_animator"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/et_cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:textColorHint="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/input_citizenship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

        </ViewAnimator>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/backgroundColor"
                android:layout_weight="1"
                android:text="@string/back"
                android:background="@drawable/boton_redondeado"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/backgroundColor"
                android:layout_weight="1"
                android:text="@string/next"
                android:background="@drawable/boton_redondeado"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>
