<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.ciaprojects.europresents.MainActivity"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/signin_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/et_password"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/et_password"
            android:text="@string/signin"
            android:layout_margin="10dp"
            android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_button"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="50dp"
        android:id="@+id/textView"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:hint="@string/user"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:layout_margin="10dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/button_facebook_login"
        android:background="@drawable/boton_redondeado"
        android:text="@string/login"
        android:textColor="@color/backgroundColor"
        android:layout_margin="10dp"/>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_gmail_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:minHeight="50dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="231dp"
            android:layout_margin="10dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_gmail_login"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:layout_margin="10dp"
        style="@style/redondeado"/>

</RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>
